hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_all_ops@llvm20.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@2 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.2 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@3 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.3 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@4 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.4 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define private void @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %1 = insertvalue { ptr, i64 } poison, ptr %0, 0
  %2 = insertvalue { ptr, i64 } %1, i64 0, 1
  %3 = getelementptr inbounds i64, ptr %0, i64 0
  store i64 1, ptr %3, align 4
  %4 = getelementptr inbounds i64, ptr %0, i64 1
  store i64 2, ptr %4, align 4
  %5 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %6 = insertvalue { ptr, i64 } poison, ptr %5, 0
  %7 = insertvalue { ptr, i64 } %6, i64 0, 1
  %8 = getelementptr inbounds i64, ptr %5, i64 0
  store i64 1, ptr %8, align 4
  %9 = getelementptr inbounds i64, ptr %5, i64 1
  store i64 2, ptr %9, align 4
  %array_ptr = extractvalue { ptr, i64 } %7, 0
  %array_offset = extractvalue { ptr, i64 } %7, 1
  %10 = add i64 %array_offset, 0
  %11 = getelementptr inbounds i64, ptr %array_ptr, i64 %10
  %12 = load i64, ptr %11, align 4
  %13 = add i64 %array_offset, 1
  %14 = getelementptr inbounds i64, ptr %array_ptr, i64 %13
  %15 = load i64, ptr %14, align 4
  %array_ptr9 = extractvalue { ptr, i64 } %2, 0
  %array_offset10 = extractvalue { ptr, i64 } %2, 1
  %16 = icmp ult i64 0, 2
  %17 = icmp ult i64 1, 2
  %18 = and i1 %16, %17
  br i1 %18, label %21, label %19

19:                                               ; preds = %entry_block
  %20 = insertvalue { i1, { ptr, i64 } } { i1 false, { ptr, i64 } poison }, { ptr, i64 } %2, 1
  br label %29

21:                                               ; preds = %entry_block
  %22 = add i64 0, %array_offset10
  %23 = add i64 1, %array_offset10
  %24 = getelementptr inbounds i64, ptr %array_ptr9, i64 %22
  %25 = load i64, ptr %24, align 4
  %26 = getelementptr inbounds i64, ptr %array_ptr9, i64 %23
  %27 = load i64, ptr %26, align 4
  store i64 %27, ptr %24, align 4
  store i64 %25, ptr %26, align 4
  %28 = insertvalue { i1, { ptr, i64 } } { i1 true, { ptr, i64 } poison }, { ptr, i64 } %2, 1
  br label %29

29:                                               ; preds = %19, %21
  %"0.0" = phi { i1, { ptr, i64 } } [ %28, %21 ], [ %20, %19 ]
  %30 = extractvalue { i1, { ptr, i64 } } %"0.0", 0
  switch i1 %30, label %31 [
    i1 true, label %33
  ]

31:                                               ; preds = %29
  %32 = extractvalue { i1, { ptr, i64 } } %"0.0", 1
  br label %cond_19_case_0

33:                                               ; preds = %29
  %34 = extractvalue { i1, { ptr, i64 } } %"0.0", 1
  br label %cond_19_case_1

cond_19_case_0:                                   ; preds = %31
  %35 = extractvalue { i32, ptr } { i32 1, ptr @0 }, 0
  %36 = extractvalue { i32, ptr } { i32 1, ptr @0 }, 1
  %37 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 %35, ptr %36)
  call void @abort()
  br label %cond_exit_19

cond_19_case_1:                                   ; preds = %33
  br label %cond_exit_19

cond_exit_19:                                     ; preds = %cond_19_case_1, %cond_19_case_0
  %"013.0" = phi { ptr, i64 } [ zeroinitializer, %cond_19_case_0 ], [ %34, %cond_19_case_1 ]
  %array_ptr25 = extractvalue { ptr, i64 } %"013.0", 0
  %array_offset26 = extractvalue { ptr, i64 } %"013.0", 1
  %38 = icmp ult i64 0, 2
  br i1 %38, label %40, label %39

39:                                               ; preds = %cond_exit_19
  br label %45

40:                                               ; preds = %cond_exit_19
  %41 = add i64 0, %array_offset26
  %42 = getelementptr inbounds i64, ptr %array_ptr25, i64 %41
  %43 = load i64, ptr %42, align 4
  %44 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %43, 1
  br label %45

45:                                               ; preds = %39, %40
  %"027.0" = phi { i1, i64 } [ %44, %40 ], [ { i1 false, i64 poison }, %39 ]
  %46 = extractvalue { i1, i64 } %"027.0", 0
  switch i1 %46, label %47 [
    i1 true, label %48
  ]

47:                                               ; preds = %45
  br label %cond_31_case_0

48:                                               ; preds = %45
  %49 = extractvalue { i1, i64 } %"027.0", 1
  br label %cond_31_case_1

cond_31_case_0:                                   ; preds = %47
  %50 = extractvalue { i32, ptr } { i32 1, ptr @1 }, 0
  %51 = extractvalue { i32, ptr } { i32 1, ptr @1 }, 1
  %52 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.1, i32 %50, ptr %51)
  call void @abort()
  br label %cond_exit_31

cond_31_case_1:                                   ; preds = %48
  br label %cond_exit_31

cond_exit_31:                                     ; preds = %cond_31_case_1, %cond_31_case_0
  %"031.0" = phi i64 [ 0, %cond_31_case_0 ], [ %49, %cond_31_case_1 ]
  %array_ptr41 = extractvalue { ptr, i64 } %"013.0", 0
  %array_offset42 = extractvalue { ptr, i64 } %"013.0", 1
  %53 = icmp ult i64 1, 2
  br i1 %53, label %57, label %54

54:                                               ; preds = %cond_exit_31
  %55 = insertvalue { i1, { ptr, i64 }, i64 } { i1 false, { ptr, i64 } poison, i64 poison }, i64 %"031.0", 2
  %56 = insertvalue { i1, { ptr, i64 }, i64 } %55, { ptr, i64 } %"013.0", 1
  br label %63

57:                                               ; preds = %cond_exit_31
  %58 = add i64 1, %array_offset42
  %59 = getelementptr inbounds i64, ptr %array_ptr41, i64 %58
  %60 = load i64, ptr %59, align 4
  store i64 %"031.0", ptr %59, align 4
  %61 = insertvalue { i1, { ptr, i64 }, i64 } { i1 true, { ptr, i64 } poison, i64 poison }, i64 %60, 2
  %62 = insertvalue { i1, { ptr, i64 }, i64 } %61, { ptr, i64 } %"013.0", 1
  br label %63

63:                                               ; preds = %54, %57
  %"043.0" = phi { i1, { ptr, i64 }, i64 } [ %62, %57 ], [ %56, %54 ]
  %64 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 0
  switch i1 %64, label %65 [
    i1 true, label %68
  ]

65:                                               ; preds = %63
  %66 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 2
  %67 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 1
  br label %cond_42_case_0

68:                                               ; preds = %63
  %69 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 2
  %70 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 1
  br label %cond_42_case_1

cond_42_case_0:                                   ; preds = %65
  %71 = extractvalue { i32, ptr } { i32 1, ptr @2 }, 0
  %72 = extractvalue { i32, ptr } { i32 1, ptr @2 }, 1
  %73 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.2, i32 %71, ptr %72)
  call void @abort()
  br label %cond_exit_42

cond_42_case_1:                                   ; preds = %68
  br label %cond_exit_42

cond_exit_42:                                     ; preds = %cond_42_case_1, %cond_42_case_0
  %"046.0" = phi i64 [ 0, %cond_42_case_0 ], [ %69, %cond_42_case_1 ]
  %"147.0" = phi { ptr, i64 } [ zeroinitializer, %cond_42_case_0 ], [ %70, %cond_42_case_1 ]
  %array_ptr66 = extractvalue { ptr, i64 } %"147.0", 0
  %array_offset67 = extractvalue { ptr, i64 } %"147.0", 1
  %new_offset = add i64 %array_offset67, 1
  %74 = getelementptr inbounds i64, ptr %array_ptr66, i64 %array_offset67
  %75 = load i64, ptr %74, align 4
  %76 = insertvalue { ptr, i64 } poison, ptr %array_ptr66, 0
  %77 = insertvalue { ptr, i64 } %76, i64 %new_offset, 1
  %78 = insertvalue { i1, { ptr, i64 }, i64 } { i1 true, { ptr, i64 } poison, i64 poison }, i64 %75, 2
  %79 = insertvalue { i1, { ptr, i64 }, i64 } %78, { ptr, i64 } %77, 1
  %80 = extractvalue { i1, { ptr, i64 }, i64 } %79, 0
  switch i1 %80, label %81 [
    i1 true, label %82
  ]

81:                                               ; preds = %cond_exit_42
  br label %cond_53_case_0

82:                                               ; preds = %cond_exit_42
  %83 = extractvalue { i1, { ptr, i64 }, i64 } %79, 2
  %84 = extractvalue { i1, { ptr, i64 }, i64 } %79, 1
  br label %cond_53_case_1

cond_53_case_0:                                   ; preds = %81
  %85 = extractvalue { i32, ptr } { i32 1, ptr @3 }, 0
  %86 = extractvalue { i32, ptr } { i32 1, ptr @3 }, 1
  %87 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.3, i32 %85, ptr %86)
  call void @abort()
  br label %cond_exit_53

cond_53_case_1:                                   ; preds = %82
  br label %cond_exit_53

cond_exit_53:                                     ; preds = %cond_53_case_1, %cond_53_case_0
  %"069.0" = phi i64 [ 0, %cond_53_case_0 ], [ %83, %cond_53_case_1 ]
  %"170.0" = phi { ptr, i64 } [ zeroinitializer, %cond_53_case_0 ], [ %84, %cond_53_case_1 ]
  %array_ptr83 = extractvalue { ptr, i64 } %"170.0", 0
  %array_offset84 = extractvalue { ptr, i64 } %"170.0", 1
  %88 = add i64 %array_offset84, 0
  %89 = getelementptr inbounds i64, ptr %array_ptr83, i64 %88
  %90 = load i64, ptr %89, align 4
  %91 = insertvalue { ptr, i64 } poison, ptr %array_ptr83, 0
  %92 = insertvalue { ptr, i64 } %91, i64 %array_offset84, 1
  %93 = insertvalue { i1, { ptr, i64 }, i64 } { i1 true, { ptr, i64 } poison, i64 poison }, i64 %90, 2
  %94 = insertvalue { i1, { ptr, i64 }, i64 } %93, { ptr, i64 } %92, 1
  %95 = extractvalue { i1, { ptr, i64 }, i64 } %94, 0
  switch i1 %95, label %96 [
    i1 true, label %97
  ]

96:                                               ; preds = %cond_exit_53
  br label %cond_64_case_0

97:                                               ; preds = %cond_exit_53
  %98 = extractvalue { i1, { ptr, i64 }, i64 } %94, 2
  %99 = extractvalue { i1, { ptr, i64 }, i64 } %94, 1
  br label %cond_64_case_1

cond_64_case_0:                                   ; preds = %96
  %100 = extractvalue { i32, ptr } { i32 1, ptr @4 }, 0
  %101 = extractvalue { i32, ptr } { i32 1, ptr @4 }, 1
  %102 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.4, i32 %100, ptr %101)
  call void @abort()
  br label %cond_exit_64

cond_64_case_1:                                   ; preds = %97
  br label %cond_exit_64

cond_exit_64:                                     ; preds = %cond_64_case_1, %cond_64_case_0
  %"086.0" = phi i64 [ 0, %cond_64_case_0 ], [ %98, %cond_64_case_1 ]
  %"187.0" = phi { ptr, i64 } [ zeroinitializer, %cond_64_case_0 ], [ %99, %cond_64_case_1 ]
  %array_ptr100 = extractvalue { ptr, i64 } %"187.0", 0
  %array_offset101 = extractvalue { ptr, i64 } %"187.0", 1
  call void @free(ptr %array_ptr100)
  ret void
}

declare ptr @malloc(i64)

declare i32 @printf(ptr, ...)

declare void @abort()

declare void @free(ptr)
