hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_array_value@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { ptr, i64 } @_hl.main.1() {
alloca_block:
  %"0" = alloca { ptr, i64 }, align 8
  %"5_0" = alloca { ptr, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %1 = insertvalue { ptr, i64 } poison, ptr %0, 0
  %2 = insertvalue { ptr, i64 } %1, i64 0, 1
  %3 = getelementptr inbounds i64, ptr %0, i32 0
  store i64 1, ptr %3, align 4
  %4 = getelementptr inbounds i64, ptr %0, i32 1
  store i64 2, ptr %4, align 4
  store { ptr, i64 } %2, ptr %"5_0", align 8
  %"5_01" = load { ptr, i64 }, ptr %"5_0", align 8
  store { ptr, i64 } %"5_01", ptr %"0", align 8
  %"02" = load { ptr, i64 }, ptr %"0", align 8
  ret { ptr, i64 } %"02"
}

declare ptr @malloc(i64)
