hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_clone@llvm20.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private void @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %1 = insertvalue { ptr, i64 } poison, ptr %0, 0
  %2 = insertvalue { ptr, i64 } %1, i64 0, 1
  %3 = getelementptr inbounds i64, ptr %0, i64 0
  store i64 1, ptr %3, align 4
  %4 = getelementptr inbounds i64, ptr %0, i64 1
  store i64 2, ptr %4, align 4
  %array_ptr = extractvalue { ptr, i64 } %2, 0
  %array_offset = extractvalue { ptr, i64 } %2, 1
  %5 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %6 = insertvalue { ptr, i64 } poison, ptr %5, 0
  %7 = insertvalue { ptr, i64 } %6, i64 0, 1
  %8 = getelementptr inbounds i64, ptr %array_ptr, i64 %array_offset
  call void @llvm.memcpy.p0.p0.i64(ptr %5, ptr %8, i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2), i1 false)
  %array_ptr5 = extractvalue { ptr, i64 } %7, 0
  call void @free(ptr %array_ptr5)
  %array_ptr7 = extractvalue { ptr, i64 } %2, 0
  call void @free(ptr %array_ptr7)
  ret void
}

declare ptr @malloc(i64)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias nocapture writeonly, ptr noalias nocapture readonly, i64, i1 immarg) #0

declare void @free(ptr)

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
