hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_get@llvm20.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private void @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %1 = insertvalue { ptr, i64 } poison, ptr %0, 0
  %2 = insertvalue { ptr, i64 } %1, i64 0, 1
  %3 = getelementptr inbounds i64, ptr %0, i64 0
  store i64 1, ptr %3, align 4
  %4 = getelementptr inbounds i64, ptr %0, i64 1
  store i64 2, ptr %4, align 4
  %array_ptr = extractvalue { ptr, i64 } %2, 0
  %array_offset = extractvalue { ptr, i64 } %2, 1
  %5 = icmp ult i64 1, 2
  br i1 %5, label %7, label %6

6:                                                ; preds = %entry_block
  br label %12

7:                                                ; preds = %entry_block
  %8 = add i64 1, %array_offset
  %9 = getelementptr inbounds i64, ptr %array_ptr, i64 %8
  %10 = load i64, ptr %9, align 4
  %11 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %10, 1
  br label %12

12:                                               ; preds = %6, %7
  %"0.0" = phi { i1, i64 } [ %11, %7 ], [ { i1 false, i64 poison }, %6 ]
  %array_ptr8 = extractvalue { ptr, i64 } %2, 0
  call void @free(ptr %array_ptr8)
  ret void
}

declare ptr @malloc(i64)

declare void @free(ptr)
