hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_unpack@llvm14.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i64, i64 } @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call i8* @malloc(i64 mul (i64 ptrtoint (i64* getelementptr (i64, i64* null, i32 1) to i64), i64 2))
  %1 = bitcast i8* %0 to i64*
  %2 = insertvalue { i64*, i64 } poison, i64* %1, 0
  %3 = insertvalue { i64*, i64 } %2, i64 0, 1
  %4 = getelementptr inbounds i64, i64* %1, i32 0
  store i64 1, i64* %4, align 4
  %5 = getelementptr inbounds i64, i64* %1, i32 1
  store i64 2, i64* %5, align 4
  %array_ptr = extractvalue { i64*, i64 } %3, 0
  %array_offset = extractvalue { i64*, i64 } %3, 1
  %6 = add i64 %array_offset, 0
  %7 = getelementptr inbounds i64, i64* %array_ptr, i64 %6
  %8 = load i64, i64* %7, align 4
  %9 = add i64 %array_offset, 1
  %10 = getelementptr inbounds i64, i64* %array_ptr, i64 %9
  %11 = load i64, i64* %10, align 4
  %mrv = insertvalue { i64, i64 } undef, i64 %8, 0
  %mrv6 = insertvalue { i64, i64 } %mrv, i64 %11, 1
  ret { i64, i64 } %mrv6
}

declare i8* @malloc(i64)
